// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<View>
  <SimpleCard>
    <DummyTranslation
      id="Default card A"
    />
  </SimpleCard>
  <SimpleCard>
    <DummyTranslation
      id="Default card B"
    />
  </SimpleCard>
</View>
`;

exports[`renders as expected with onPress callback 1`] = `
<View>
  <SimpleCard
    onPress={[Function]}
  >
    <DummyTranslation
      id="Clickable card"
    />
  </SimpleCard>
  <SimpleCard
    onPress={[Function]}
  >
    <DummyTranslation
      id="Clickable card"
    />
  </SimpleCard>
</View>
`;
